Regenerated objects with the new hotness. We're down to a single generic type warning. Yay!